# mockloop-mcp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  ENHANCEMENT_PLAN.md  FINAL_INTEGRATION_REPORT.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_PART1_IMPLEMENTATION.md  README.md  docs-requirements.txt  fix_database.py  generate_mock.py  generator.py  main.py  mkdocs.yml  parser.py  pyproject.toml  requirements.txt  test_api_spec.json  test_auth_generator.py  test_comprehensive_integration.py  test_generator.py  test_manage_mock_data.py
.clinerules/: gnerator-rules.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support.yml
.github/badges/: downloads.txt  health.txt  version.txt
.github/workflows/: ci.yml  docs.yml  monitor.yml  publish.yml  release.yml  security.yml  test.yml
docs/: index.md  mcp-proxy-guide.md
docs/contributing/: community-support.md  development-setup.md  guidelines.md  release-process.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: mcp-proxy-guide.md
examples/mcp-proxy/: authentication-example.py  basic-mock-example.py  create_plugin_modes_example.py  execute_plan_with_proxy_example.py  hybrid-workflow-example.py  hybrid_mode_routing_example.py  proxy-validation-example.py
examples/schemapin/: README.md  advanced_usage.py  basic_usage.py
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: bump_version.py  monitor_package.py  prepare_release.py  validate_pypi_readiness.py  verify_installation.py
src/mockloop_mcp/: __init__.py  database_migration.py  generator.py  log_analyzer.py  main.py  mcp_audit_logger.py  mcp_compliance.py  mcp_resources.py  mcp_tools.py  mock_server_manager.py  parser.py  stdio_server.py
src/scripts/: .gitkeep
templates/: route_template.j2
tests/: .gitkeep  __init__.py  generate_test_data.py
tests/fixtures/: __init__.py  test_spec.json
tests/integration/: __init__.py  test_comprehensive_integration.py  test_final_integration.py  test_manage_mock_data.py  test_mcp_proxy_integration.py  test_structure.py  (+2 more)
(+31 files in other folders)
